--- a/ofkpuweb/WebContent/top.html
+++ b/ofkpuweb/WebContent/top.html
@@ -20,8 +20,8 @@
 						<div class = "ofk-top4-first">
 							Toto je prvá veta článku, blá blá blá blá blá.
 						</div>
-						<div>
-							<a href="">viac ></a>
+						<div class = "ofk-top4-link">
+							<a href="">viac&#160;<span>></span></a>
 						</div>
 					</div>
 					<div class = "ofk-top4-btns">
